# 256_project

./: .gitignore  README.md  initfile.133.441667.xml  jsb_interface.py  ppo_fast_learner_log.csv.monitor.csv  ppo_fast_learner_low_gamma_log.csv.monitor.csv  ppo_log.csv.monitor.csv  ppo_low_gamma_log.csv.monitor.csv  pyproject.toml  requirements.txt  start_flightgear.sh
agents/: ppo_agent.py
config/: c172_ic_config.py  f16_ic_config.py  ppo_config.yaml
environment/: fdm.py  fdm_env.py  jsb_flight_dynamics.py  reward.py  simulation.py
logs/: state_action_reward_history_episode_100.pkl  state_action_reward_history_episode_1000.pkl  state_action_reward_history_episode_1100.pkl  state_action_reward_history_episode_1200.pkl  state_action_reward_history_episode_1300.pkl  state_action_reward_history_episode_200.pkl  state_action_reward_history_episode_300.pkl  state_action_reward_history_episode_400.pkl  state_action_reward_history_episode_500.pkl  state_action_reward_history_episode_600.pkl  state_action_reward_history_episode_700.pkl  state_action_reward_history_episode_800.pkl  state_action_reward_history_episode_900.pkl
models/: a=0.0002, gamma=0.99_normalize.pkl  ppo_big_jsbsim_normalize.pkl  ppo_fast_learner_jsbsim_normalize.pkl  ppo_fast_learner_low_gamma_big_jsbsim_normalize.pkl  ppo_fast_learner_low_gamma_jsbsim_normalize.pkl  ppo_jsbsim_normalize.pkl  ppo_low_gamma_jsbsim_normalize.pkl  ppo_normalize.pkl
models/ent=0.02/: a=0.0001, gamma=0.99_normalize.pkl  (+6 more)
scripts/: evaluate.py  train.py
utils/: constants.py  jsb_interface.py  plotting.py
(+39 files in other folders)
