[project]
name = "rl-flight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flightgear-python>=1.7.0",
    "gym-jsbsim>=0.6.7",
    "jsbsim>=1.2.2",
    "matplotlib>=3.7.5",
    "polars>=1.8.2",
    "torch>=2.7.0",
]
